# scrap

./: .gitignore  README.md
01-anon/: anon.md  anon.py
02-bib/: README.md  bible_page_generator.py  g.py
03-mdslides/: mdslides.htm
04-textfs/: README.md  c.py
05-audio/: README.md
05-qwen3tts/: README.md
06-db/: workspace.prm
07-converters/: README.md  csv2xlsx.py  md2html.py  xlsx2tsql.py
08-counters/: README.md  word_morph_counter.py
09-tsqleda/: README.md  app.py  generator.py  io_utils.py  requirements.txt  tsql_eda.py
10-diffpage/: README.md  diffpage.py
11-folderorgs/: 00-plan.md  README.md  __init__.py  cli.py  fsutils.py  organizer.py  paths.py  pyproject.toml  rules.py
12-astro/: README.md  astro.py  astro.xlsx  elongation.csv  fix_moonphases.py  meteors.csv  moonphases.csv  perigees.csv
13-sqlplan/: livestats.md  livestats.xml  querystats.md  querystats.xml  sqlplan2mermaid.py
14-ipynb2sql/: ipynb2sql.py
15-mergenodes/: clover-permissions-hierarchy-alias.html  clover-permissions-hierarchy-name.txt  clover-permissions-hierarchy.txt  mergenodes.py
folder1/: Export-SQLAgentJobs.ps1  Logger.ps1  SQL hodgepodge.ipynb  dags.py  generate_jobschedule.py  helpdeskfiles.openrefine.py  pnp.py  prompts.py  sqlagentjobs.sql  sqltools.py  tsqltools.py
folder2/: Preliminaries.ipynb  VAERS.rb  cl.sh  db2-rename.sh  dependency.sh  dependency_xserver.py  get_assets_profiles.sh  get_retention_profiles.sh  get_sqlparser2.sh  get_staging_profiles.sh  get_td.sh  install_powershell.sh  log.txt  mssql.dsn  newcoa.sh  profiler.py  sandboxes.sh  td.rb  (+2 more)
(+139 files in other folders)
