[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "downloads_organizer"
version = "0.1.0"
description = "Organize a Downloads folder using a purpose-first hierarchy"
requires-python = ">=3.10"

[project.scripts]
downloads-organizer = "downloads_organizer.cli:main"
